...
                                  Color.Transparent // Transparent at the bottom
                                  )))
              .testTag("topAppBar")) {
        // Content
        Column(
...
                        modifier =
                            Modifier.clickable(onClick = onClickAction)
                                .testTag("filterByLocation")) {
                          Icon(
                              imageVector = Icons.Outlined.LocationOn,
...

  Row(
      modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("filterBar"),
      horizontalArrangement = Arrangement.SpaceBetween,
      verticalAlignment = Alignment.CenterVertically) {
...
                                shape = RoundedCornerShape(16.dp),
                                spotColor = serviceItem.color)
                            .testTag("filterOption"),
                    elevation = CardDefaults.cardElevation(defaultElevation = 0.dp),
                    colors = CardDefaults.cardColors(containerColor = colorScheme.background),
...
                    .size(32.dp)
                    .shadow(12.dp, shape = CircleShape)
                    .testTag("filterIcon")
                    .clickable { display() },
            tint = colorScheme.onBackground)
...
) {
  LazyRow(
      modifier = Modifier.fillMaxWidth().testTag("popularProviders"),
      horizontalArrangement = Arrangement.spacedBy(10.dp, Alignment.Start),
      verticalAlignment = Alignment.Top,
...
              .background(colorScheme.background)
              .padding(horizontal = 16.dp)
              .testTag("providersList"),
      verticalArrangement = Arrangement.spacedBy(16.dp)) {
        // Popular providers section
...
                    textStyle = TextStyle(color = colorScheme.onSurfaceVariant),
                    onValueChange = { listProviderViewModel.updateMinPrice(it) },
                    modifier = Modifier.fillMaxWidth().testTag("minPrice"),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number))
...
                    textStyle = TextStyle(color = colorScheme.onSurfaceVariant),
                    onValueChange = { listProviderViewModel.updateMaxPrice(it) },
                    modifier = Modifier.fillMaxWidth().testTag("maxPrice"),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number))
...
                          else colorScheme.surfaceVariant,
                      shape = RoundedCornerShape(size = 8.dp))
                  .testTag("filterAct")
                  .padding(8.dp)
                  .clickable {
...
  Box(
      modifier =
          Modifier.testTag("applyFilterButton")
              .width(249.dp)
              .height(56.dp)
...
fun FilterComposable(listProviderViewModel: ListProviderViewModel, display: () -> Unit) {
  Column(
      modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("filterSheet"),
      verticalArrangement = Arrangement.spacedBy(12.dp),
      horizontalAlignment = Alignment.CenterHorizontally) {
...
              .height(56.dp)
              .background(color = colorScheme.surface, shape = RoundedCornerShape(16.dp))
              .testTag("SearchLocBar"))
}

...
              .clickable { onClickAction() }
              .padding(16.dp)
              .testTag("suggestedLocation"),
      verticalAlignment = Alignment.CenterVertically) {
        Icon(
...
      }
  Column(
      modifier = Modifier.fillMaxSize().padding(16.dp).testTag("filterByLocationSheet"),
  ) {
    // SearchBar
...
                  color = colorScheme.onBackground,
              ))
      LazyColumn(modifier = Modifier.testTag("cachedLocations")) {
        itemsIndexed(cachedLocations) { index, location ->
          // TODO see the index if it's the first element set its background color to the green
...
      }
    } else {
      LazyColumn(modifier = Modifier.testTag("suggestedLocations")) {
        itemsIndexed(locationSuggestions) { index, location ->
          LocationSuggestion(
...
